otra vez el huamea

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -369,22 +369,22 @@
 
     <string name="planeta_haumea_titulo">Haumea</string>
     <string name="planeta_haumea_desc">
-        <![CDATA[
-            <br>El planeta enano Haumea fue originalmente designado como 2003 EL61 (y apodado Santa por un equipo de descubrimiento). Haumea se encuentra en los cinturones de Kuiper, una región con forma de rosquilla compuesta por cuerpos helados más allá de la órbita de Neptuno.</br>
+    <![CDATA[
+        <br>El planeta enano Haumea fue originalmente designado como 2003 EL61 (y apodado Santa por un equipo de descubrimiento). Haumea se encuentra en los cinturones de Kuiper, una región con forma de rosquilla compuesta por cuerpos helados más allá de la órbita de Neptuno.</br>
 
-            <br><br>Haumea es un planeta enano de forma ovalada y uno de los objetos grandes que giran más rápido en nuestro sistema solar. Su rápida rotación distorsiona su forma, dándole un aspecto similar al de un balón de fútbol americano.</br></br>
+        <br><br>Haumea es un planeta enano de forma ovalada y uno de los objetos grandes que giran más rápido en nuestro sistema solar. Su rápida rotación distorsiona su forma, dándole un aspecto similar al de un balón de fútbol americano.</br></br>
 
-            <br><br>Haumea es extremadamente fría y no parece tener condiciones adecuadas para la vida.</br></br>
+        <br><br>Haumea es extremadamente fría y no parece tener condiciones adecuadas para la vida.</br></br>
 
-            <br><br>Con un diámetro ecuatorial de aproximadamente 1740 kilómetros (1080 millas), Haumea tiene aproximadamente 1/7 del ancho de la Tierra. Si la Tierra tuviera el tamaño de una moneda de cinco centavos, Haumea sería aproximadamente tan grande como una semilla de sésamo.</br></br>
+        <br><br>Con un diámetro ecuatorial de aproximadamente 1740 kilómetros (1080 millas), Haumea tiene aproximadamente 1/7 del ancho de la Tierra. Si la Tierra tuviera el tamaño de una moneda de cinco centavos, Haumea sería aproximadamente tan grande como una semilla de sésamo.</br></br>
 
-            <br><br>Haumea tarda 285 años terrestres en realizar un viaje alrededor del Sol. Mientras Haumea orbita alrededor del Sol, completa una rotación cada 4 horas, lo que lo convierte en uno de los objetos grandes que giran más rápido en nuestro sistema solar.</br></br>
+        <br><br>Haumea tarda 285 años terrestres en realizar un viaje alrededor del Sol. Mientras Haumea orbita alrededor del Sol, completa una rotación cada 4 horas, lo que lo convierte en uno de los objetos grandes que giran más rápido en nuestro sistema solar.</br></br>
 
-            <br><br>Haumea tiene dos lunas conocidas: Namaka, la luna interior, y Hi'iaka, la luna exterior. Ambas fueron descubiertas en 2005 y recibieron su nombre de las hijas mitológicas de Haumea. Hi'iaka es la diosa patrona de la isla de Hawái y de las bailarinas de hula. Namaka es un espíritu del agua en la mitología hawaiana.</br></br>
+        <br><br>Haumea tiene dos lunas conocidas: Namaka, la luna interior, y Hi’iaka, la luna exterior. Ambas fueron descubiertas en 2005 y recibieron su nombre de las hijas mitológicas de Haumea. Hi’iaka es la diosa patrona de la isla de Hawái y de las bailarinas de hula. Namaka es un espíritu del agua en la mitología hawaiana.</br></br>
 
-            <br><br>Haumea es el primer objeto conocido del Cinturón de Kuiper con anillos. Los científicos anunciaron el descubrimiento en 2017 tras observar el paso del planeta enano frente a una estrella.</br></br>
-        ]]>
-    </string>
+        <br><br>Haumea es el primer objeto conocido del Cinturón de Kuiper con anillos. Los científicos anunciaron el descubrimiento en 2017 tras observar el paso del planeta enano frente a una estrella.</br></br>
+    ]]>
+</string>
 
 
 
